# OhMyQt

./: .gitignore  LICENSE  README.md
01_HelloWorld/: CMakeLists.txt  basic.qml  helphandler.cpp  helphandler.h  main.cpp  main.qml  qml.qrc
02_DataBinding/: CMakeLists.txt  README.md  curlhelper.cpp  curlhelper.h  main.cpp  main.qml
